[package]
name = "bundy"
version = "0.1.2"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"
description = "Bundy data signing and verification library"
repository = "https://github.com/kanidm/bundy"
readme = "README.md"
keywords = ["jwt", "verification", "fernet"]
categories = ["cryptography"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13"
openssl = "0.10"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"

